[gd_scene load_steps=16 format=3 uid="uid://dw234wy7bm6a1"]

[ext_resource type="Script" path="res://Bosses/Boss1/Scripts/boss.gd" id="1_py4en"]
[ext_resource type="Texture2D" uid="uid://bahf8yu2l6ydv" path="res://Assets/Boss/Crystal Knigth.png" id="2_i6twb"]
[ext_resource type="Script" path="res://Bosses/TuringMachineAI.gd" id="5_xjopq"]
[ext_resource type="Script" path="res://Bosses/Boss1/Scripts/idle.gd" id="6_g0736"]
[ext_resource type="Script" path="res://Bosses/Boss1/Scripts/dash.gd" id="9_3svdx"]
[ext_resource type="PackedScene" uid="uid://bv7eo77rlfpxt" path="res://Componentes/Entidades/hitbox_componente.tscn" id="11_oip8m"]
[ext_resource type="Script" path="res://Componentes/Entidades/VidaComponente.gd" id="11_yudui"]
[ext_resource type="Script" path="res://Bosses/Boss1/Scripts/spawn.gd" id="18_mndmt"]
[ext_resource type="Script" path="res://Bosses/Boss1/Scripts/stunned.gd" id="20_d50bk"]

[sub_resource type="Animation" id="Animation_jy66f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xxrop"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_4jt4w"]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_8d1ag"]
resource_name = "projectile"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 17, 18, 19, 20]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k0gy0"]
_data = {
"RESET": SubResource("Animation_jy66f"),
"attack": SubResource("Animation_xxrop"),
"idle": SubResource("Animation_4jt4w"),
"projectile": SubResource("Animation_8d1ag")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lm3ib"]
radius = 43.5
height = 125.0

[node name="boss" type="CharacterBody2D" node_paths=PackedStringArray("vidaComponent")]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_py4en")
vidaComponent = NodePath("VidaComponente")

[node name="BossSprites" type="Sprite2D" parent="."]
position = Vector2(-3.5, 2)
scale = Vector2(2, 2)
texture = ExtResource("2_i6twb")
hframes = 5
vframes = 5
frame = 1

[node name="bossAnimations" type="AnimationPlayer" parent="."]
root_node = NodePath("../BossSprites")
libraries = {
"": SubResource("AnimationLibrary_k0gy0")
}

[node name="VidaComponente" type="Node2D" parent="."]
position = Vector2(-109.776, -124.319)
script = ExtResource("11_yudui")
MAX_VIDA = 100.0

[node name="HitboxComponente" parent="." node_paths=PackedStringArray("vida_componente") instance=ExtResource("11_oip8m")]
position = Vector2(-109.776, -124.319)
vida_componente = NodePath("../VidaComponente")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponente"]
position = Vector2(111.276, 123.319)
shape = SubResource("CapsuleShape2D_lm3ib")

[node name="TuringMachineAI" type="Node2D" parent="."]
script = ExtResource("5_xjopq")

[node name="idle" type="Node" parent="TuringMachineAI"]
script = ExtResource("6_g0736")

[node name="spawn" type="Node" parent="TuringMachineAI"]
script = ExtResource("18_mndmt")

[node name="dash" type="Node" parent="TuringMachineAI"]
script = ExtResource("9_3svdx")

[node name="stunned" type="Node" parent="TuringMachineAI"]
script = ExtResource("20_d50bk")

[node name="Timer" type="Timer" parent="TuringMachineAI/stunned"]
wait_time = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_right = 154.0
offset_bottom = 27.0
grow_horizontal = 2
value = 100.0

[connection signal="animation_finished" from="bossAnimations" to="." method="_on_boss_animations_animation_finished"]
[connection signal="timeout" from="TuringMachineAI/stunned/Timer" to="TuringMachineAI/stunned" method="_on_timer_timeout"]
